--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,10 +20,10 @@
           <a title="Log Out" href="logout">Log Out</a>
         </button>
     </header>
-    <h2>{{results}}</h2>
+    
     <nav>
     <div class="nav">  
-      <p><a href="account">account</a> <a href="/">Home</a> <a class="active" href="out">The Medium</a></p>
+      <p><a href="account">Account</a> <a href="/">Home</a> <a class="active" href="out">Posts</a></p>
     </nav>
 
 
