--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@ contents
           </nav>
         <h2>login</h2>
         <input placeholder="username" type="text" name="username" required>
-        <input placeholder="password" type="text" name="password" required>
+        <input placeholder="password" type="password" name="password" required>
         <input type="submit" value="find">
 		<br></br>
 		<br></br>
