--- a/templates/account.html
+++ b/templates/account.html
@@ -10,7 +10,7 @@ logged
 <h2>{{result}}</h2>
 
 <form id="upload" action="{{url_for('upload')}}" method="POST" enctype="multipart/form-data">
-    <input type="file" name="file" accept="image/*" multiple>
+    <p><input type="file" name="file" accept="image/*" multiple></p>>
     <input type="submit" value="send">
   </form>
   
